--- a/views/newComment.ejs
+++ b/views/newComment.ejs
@@ -1,14 +1,17 @@
 <% include partials/header %>
-<h1>Add new Comment to <%=blogs.title%></h1>
-<div>
+<div class="AddCommentHeader" >
+Add new Comment to <strong><%=blogs.title%></strong></div>
+<div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-6 offset-lg-3 offset-sm-3 offset-md-3">
     <form method="POST" action='/blogs/<%=blogs._id%>/comments'>
         <div class="form-group">
-            <input type="text" name="comment" placeholder="comment">
+            <textarea class="form-control" rows="7" type="text" name="comment" placeholder="comment" required></textarea>
         </div>
         <div class="form-group">
-            <input type="text" name="author" placeholder="author">
+            <input class="form-control" type="text" name="author" placeholder="author" required>
         </div>
-        <button>Add Comment</button>
+        <button class="form-control btn btn-primary">Add Comment</button>
     </form>
+    </div>
 </div>
 <% include partials/footer %>
