--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,3 +1,32 @@
-<h1>Show page!</h1>
-<p><%=blog.title%></p>
-<a href="/blogs/<%blog._id%>/comments"> add comment65s</a>
+<% include partials/header %>
+
+<div class="row">
+    <div class="col-lg-8 col-md-8 col-sm-8 col-xm-8 offset-lg-2 offset-md-2 offset-sm-2">
+            <div>
+                <div class="sbody">
+                <!-- style="background-color:lightgray;
+                       padding : 5px;
+                       border-radius: 5px;
+                "  -->
+                 
+                        <div class="title row justify-content-center title">                            
+                                <%=blog.title%>                       
+                        </div>
+                        <div>
+                            <%= blog.body %>
+                        </div>
+           
+                </div>
+                <div class="CommentHeader">Comments</div>
+              <div>
+                       <% blog.comments.forEach(function(comment){ %>
+                        <div  class="comment">
+                           <div class="commentAuthor"><%= comment.author %></div>
+                           <div><%= comment.comment %></div>
+                        </div>
+                       <% }) %>
+               </div>
+               <div><a href='/blogs/<%= blog._id %>/comments/new'>add comment</a></div>
+            </div>
+    </div>
+</div>
